--- a/_posts/AWS/2023-09-05-CH3-1.md
+++ b/_posts/AWS/2023-09-05-CH3-1.md
@@ -27,7 +27,7 @@ tags: [eks, 3장]
 
 ### 1.1. CloudFormation 스택 생성
 
-[해당 링크](https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-2#/stacks/new?stackName=myeks&templateURL=https:%2F%2Finflearnaeb.s3.ap-northeast-2.amazonaws.com%2Feks-oneclick2.yaml){:target="_blank"}를 클릭하면 AWS CloudFormation 페이지로 연결되며, 파라미터를 입력 후 스택을 생성합니다.
+[해당 링크](https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-2#/stacks/new?stackName=myeks&templateURL=https:%2F%2Fdadaok.github.io%2Fassets%2Fyaml%2Feks-oneclick2.yaml){:target="_blank"}를 클릭하면 AWS CloudFormation 페이지로 연결되며, 파라미터를 입력 후 스택을 생성합니다.
 
 {: .box-note}
 **Note:** AWS 관리 콘솔에 로그인 할때 IAM 사용자 계정으로 진행합니다.
