--- a/_posts/AWS/2023-09-22-CH5-2.md
+++ b/_posts/AWS/2023-09-22-CH5-2.md
@@ -19,7 +19,7 @@ tags: [eks, 5장]
 <br/>
 
 이번 실습은 <span style='color:black; background-color:#FFDB58'>**5장 Amazon EKS 원클릭 배포**</span> 환경에서 진행합니다.  
-인프라 배포를 진행하지 않은 경우 [링크](https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-2#/stacks/new?stackName=myeks&templateURL=https:%2F%2Finflearnaeb.s3.ap-northeast-2.amazonaws.com%2Feks-oneclick4.yaml){:target="_blank"}를 통해 배포 후 복귀 바랍니다.  
+인프라 배포를 진행하지 않은 경우 [링크](https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-2#/stacks/new?stackName=myeks&templateURL=https:%2F%2Fdadaok.github.io%2Fassets%2Fyaml%2Feks-oneclick4.yaml){:target="_blank"}를 통해 배포 후 복귀 바랍니다.  
 그리고 새롭게 인프라를 배포하면 아래 기본 설정 명령을 입력 후 진행 바랍니다.
 
 <details>
