--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -54,7 +54,8 @@ CriteriaQuery<Member> query = cb.createQuery(Member.class);
 //루트  클래스 (조회를  시작할  클래스)
 Root<Member> m = query.from(Member.class); 
 
-//쿼리  생성 CriteriaQuery<Member> cq =
+//쿼리  생성 
+CriteriaQuery<Member> cq =
 query.select(m).where(cb.equal(m.get("username"), “kim”)); 
 List<Member> resultList = em.createQuery(cq).getResultList();
 
