reveal and reactive

--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -365,7 +365,8 @@ where t.name = ‘팀A’
 - 최적화가 필요한 곳은 페치 조인 적용
 
 #### 일대다 관계 팁!
-> 페치조인이나 일반조인으로 데이터를 가져올때 한번에 in절을 사용하여 가져오는 방법
+> 지연 로딩이나 일반 조인으로 데이터를 가져올때 한번에 in절을 사용하여 가져오는 방법  
+> 배치 사이즈란? 한 번에 로드할 수 있는 연관 데이터의 개수를 의미한다.
 
 ``` java
 // 엔티티에서 직접 설정
