--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -463,5 +463,16 @@ List<Member> resultList =
 - 쿼리 한 번으로 여러 테이블 변경하는 방법 지원(ex : update ... where p.age > 20)
 - 벌크 연산은 데이터베이스에서 직접 진행하기 때문에 영속성 컨텍스트와 싱크가 안맞을 수 있다.
   - 싱크 방법 두가지
-    - 1. 벌크 연산을 먼저 실행
-    - 2. 벌크 연산 후 clear() 후 다시 불러와 사용한다.
+    - 1) 벌크 연산을 먼저 실행
+    - 2) 벌크 연산 후 clear() 후 다시 불러와 사용한다.
+
+```java
+// 벌크 연산
+int resultCount = em.createQuery("update Member m set m.age = 20").executeUpdate();
+
+// clear
+em.clear();
+
+// clear를 하지 않으면 반영 안된다.
+Member findMember = em.find(Member.class, "id");
+```
