reveal and reactive

--- a/_posts/Kubernetes/2024-04-02-k8s-test.md
+++ b/_posts/Kubernetes/2024-04-02-k8s-test.md
@@ -99,7 +99,7 @@ spec:
           averageUtilization: 40
 ```
 
-![img.png](../../assets/img/kubernetes/sprint1-1/img.png)
+![img.png](/assets/img/kubernetes/sprint1-1/img.png)
 
 ## Traffic Routing
 - 2초 간격으로 꾸준히 트래픽을 발생
@@ -108,7 +108,7 @@ spec:
 while true; do curl http://192.168.56.30:31221/hostname; sleep 2; echo '';  done;
 ```
 
-![img_1.png](../../assets/img/kubernetes/sprint1-1/img_1.png)
+![img_1.png](/assets/img/kubernetes/sprint1-1/img_1.png)
 
 ## Self-Healing
 - 강제로 메모리 릭 발생
@@ -116,12 +116,12 @@ while true; do curl http://192.168.56.30:31221/hostname; sleep 2; echo '';  done
 curl 192.168.56.30:31221/memory-leak
 ```
 
-![img_2.png](../../assets/img/kubernetes/sprint1-1/img_2.png)
+![img_2.png](/assets/img/kubernetes/sprint1-1/img_2.png)
 
 - 쿠버네티스에서 메모리 릭이 발생한 파드를 재시작(1)한 것을 확인할 수 있음
 
-![img_3.png](../../assets/img/kubernetes/sprint1-1/img_3.png)
-![img_4.png](../../assets/img/kubernetes/sprint1-1/img_4.png)
+![img_3.png](/assets/img/kubernetes/sprint1-1/img_3.png)
+![img_4.png](/assets/img/kubernetes/sprint1-1/img_4.png)
 
 - 발생한 파드와 시간대를 토대로 문제 로그 확인 가능
 - 로그를 통해 OOM 발생 이후 쿠버네티스가 자동으로 재시작하는 것을 확인할 수 있음
@@ -133,7 +133,7 @@ curl 192.168.56.30:31221/cpu-load
 ```
 
 - 증가한 트래픽에 따라 Auto Scaling이 적용되어 파드 수가 2 -> 4개로 증가
-![img_5.png](../../assets/img/kubernetes/sprint1-1/img_5.png)
+![img_5.png](/assets/img/kubernetes/sprint1-1/img_5.png)
 
 - 트래픽이 감소하면 다시 파드 수가 4 -> 2로 감소
 
