--- a/_posts/Spring/2023-08-13-Reactor.md
+++ b/_posts/Spring/2023-08-13-Reactor.md
@@ -23,7 +23,7 @@ tags:     Spring
 - Subscribe : Subscriber가 Sequence를 구독하는 것
 - Dispose : Subscriber가 Sequence 구독을 해지 하는 것
 
-![img.png](../../assets/img/spring/reactor_1/img.png)
+![img.png](/assets/img/spring/reactor_1/img.png)
 
 
 ## Publisher
