--- a/_posts/Spring/2023-08-15-Sinks.md
+++ b/_posts/Spring/2023-08-15-Sinks.md
@@ -68,3 +68,156 @@ public class SinkOneExample02 {
     }
 }
 ```
+
+![img.png](/assets/img/spring/reactor_2/img.png)
+
+```java
+import com.itvillage.utils.Logger;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Sinks;
+
+import static reactor.core.publisher.Sinks.EmitFailureHandler.FAIL_FAST;
+
+/**
+ * Sinks.Many 예제
+ *  - unicast()를 사용해서 단 하나의 Subscriber에게만 데이터를 emit하는 예제
+ */
+public class SinkManyExample01 {
+    public static void main(String[] args) {
+        // 단 하나의 Subscriber에게만 데이터를 emit할 수 있다.
+        Sinks.Many<Integer> unicastSink = Sinks.many().unicast().onBackpressureBuffer();
+        Flux<Integer> fluxView = unicastSink.asFlux();
+
+        unicastSink.emitNext(1, FAIL_FAST);
+        unicastSink.emitNext(2, FAIL_FAST);
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber1", data));
+
+        unicastSink.emitNext(3, FAIL_FAST);
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber2", data));
+    }
+}
+```
+
+- Subscriber2부분을 주석처리하면 Subscriber1에서 데이터가 잘 나오지만 둘 이상 subscribe 있을 경우 아래와 같은 에러가 난다.
+
+![img_1.png](/assets/img/spring/reactor_2/img_1.png)
+
+```java
+import com.itvillage.utils.Logger;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Sinks;
+
+import static reactor.core.publisher.Sinks.EmitFailureHandler.FAIL_FAST;
+
+/**
+ * Sinks.Many 예제
+ *  - multicast()를 사용해서 하나 이상의 Subscriber에게 데이터를 emit하는 예제
+ */
+public class SinkManyExample02 {
+    public static void main(String[] args) {
+        // 하나 이상의 Subscriber에게 데이터를 emit할 수 있다.
+        Sinks.Many<Integer> multicastSink = Sinks.many().multicast().onBackpressureBuffer();
+        Flux<Integer> fluxView = multicastSink.asFlux();
+
+        multicastSink.emitNext(1, FAIL_FAST);
+        multicastSink.emitNext(2, FAIL_FAST);
+
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber1", data));
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber2", data));
+
+        multicastSink.emitNext(3, FAIL_FAST);
+    }
+}
+```
+
+```java
+import com.itvillage.utils.Logger;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Sinks;
+
+import static reactor.core.publisher.Sinks.EmitFailureHandler.FAIL_FAST;
+
+/**
+ * Sinks.Many 예제
+ *  - replay()를 사용하여 이미 emit된 데이터 중에서 특정 개수의 최신 데이터만 전달하는 예제
+ */
+public class SinkManyExample03 {
+    public static void main(String[] args) {
+        // 구독 이후, emit 된 데이터 중에서 최신 데이터 2개만 replay 한다.
+        Sinks.Many<Integer> replaySink = Sinks.many().replay().limit(2);
+        Flux<Integer> fluxView = replaySink.asFlux();
+
+        replaySink.emitNext(1, FAIL_FAST);
+        replaySink.emitNext(2, FAIL_FAST);
+        replaySink.emitNext(3, FAIL_FAST);
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber1", data));
+        fluxView.subscribe(data -> Logger.onNext("Subscriber2", data));
+    }
+}
+```
+
+![img_2.png](/assets/img/spring/reactor_2/img_2.png)
+
+```java
+import com.itvillage.utils.Logger;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Sinks;
+
+import static reactor.core.publisher.Sinks.EmitFailureHandler.FAIL_FAST;
+
+/**
+ * Sinks.Many 예제
+ *  - replay()를 사용하여 이미 emit된 데이터 중에서 특정 개수의 최신 데이터만 전달하는 예제
+ */
+public class SinkManyExample04 {
+    public static void main(String[] args) {
+        // 구독 이후, emit된 데이터 중에서 최신 데이터 2개만 replay 한다.
+        Sinks.Many<Integer> replaySink = Sinks.many().replay().limit(2);
+        Flux<Integer> fluxView = replaySink.asFlux();
+
+        replaySink.emitNext(1, FAIL_FAST);
+        replaySink.emitNext(2, FAIL_FAST);
+        replaySink.emitNext(3, FAIL_FAST);
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber1", data));
+
+        replaySink.emitNext(4, FAIL_FAST);
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber2", data));
+    }
+}
+```
+
+![img_3.png](/assets/img/spring/reactor_2/img_3.png)
+
+```java
+import com.itvillage.utils.Logger;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Sinks;
+
+import static reactor.core.publisher.Sinks.EmitFailureHandler.FAIL_FAST;
+
+public class SinkManyExample05 {
+    public static void main(String[] args) {
+        // 구독 시점과 상관없이 emit된 모든 데이터를 replay 한다.
+        Sinks.Many<Integer> replaySink = Sinks.many().replay().all();
+        Flux<Integer> fluxView = replaySink.asFlux();
+
+        replaySink.emitNext(1, FAIL_FAST);
+        replaySink.emitNext(2, FAIL_FAST);
+        replaySink.emitNext(3, FAIL_FAST);
+
+
+        fluxView.subscribe(data -> Logger.onNext("Subscriber1", data));
+        fluxView.subscribe(data -> Logger.onNext("Subscriber2", data));
+    }
+}
+```
+
+
+![img_4.png](/assets/img/spring/reactor_2/img_4.png)
