--- a/_posts/Kubernetes/2024-04-03-k8s-object.md
+++ b/_posts/Kubernetes/2024-04-03-k8s-object.md
@@ -18,7 +18,7 @@ tags:     Kubernetes
 
 # Object
 
-![img_6.png](../../assets/img/kubernetes/sprint1-1/img_6.png)
+![img_6.png](/assets/img/kubernetes/sprint1-1/img_6.png)
 
 ## 종류 및 설명
 
@@ -414,7 +414,7 @@ spec:
 
 - 쿠버네티스가 권고하는 Label 포맷을 잘 따른 서비스
 
-![img_7.png](../../assets/img/kubernetes/sprint1-1/img_7.png)
+![img_7.png](/assets/img/kubernetes/sprint1-1/img_7.png)
 
 - part-of
     - 애플리케이션 전체 이름
@@ -457,7 +457,7 @@ spec:
 
 ## 예시
 
-![img_8.png](../../assets/img/kubernetes/sprint1-1/img_8.png)
+![img_8.png](/assets/img/kubernetes/sprint1-1/img_8.png)
 
 - 다음과 같이 Selector를 활용해 Object끼리 매핑
     - Depleyment - ReplicaSet
