--- a/_posts/Spring/2024-06-10-Jwt.md
+++ b/_posts/Spring/2024-06-10-Jwt.md
@@ -15,6 +15,8 @@ tags:     Spring
 
 <!-- text -->
 
+![img.png](/assets/img/spring/jwt/img.png)
+
 ## Flow
 1. _Filter 체인_ : Spring Security는 다양한 Filter들의 체인으로 구성되어 있다. 이 Filter 체인은 Request를 가로챈 후 일련의 절차를 처리한다. UsernamePasswordAuthenticationFilter는 사용자가 제출한 인증 정보를 처리한다.  
 2. _UsernamePasswordAuthenticationToken 생성_ : UsernamePasswordAuthenticationFilter는 UsernamePasswordAuthenticationToken을 생성하여 AuthenticationManager에게 전달한다. 이 토큰에는 사용자가 제출한 인증 정보가 포함되어 있다.  
