--- a/_posts/Spring/2016-10-15-DI.md
+++ b/_posts/Spring/2016-10-15-DI.md
@@ -18,7 +18,7 @@ tags:     Spring
 ## DI(Dependency Injection) 방식
 > DI는 IoC에 의해 관리되는 빈을 주입하는 기술이다. Spring에서는 `@Autowired` 방식과 생성자 방식이 있다.  
 > 최근에는 **불변성 보장(`final`), 순환 참조 방지, 테스트 편의성** 등의 장점으로 **생성자 주입 방식이 선호**된다.  
-> 스프링은 **하나의 생성자만 있을 경우 자동으로 의존성을 주입**한다.s
+> 스프링은 **하나의 생성자만 있을 경우 자동으로 의존성을 주입**한다.
 
 
 @Autowired과 생성자 방식 모두 리플렉션과 BeanFactory를 사용한다. 그럼 리플렉션이란 무엇인가?
