--- a/_posts/DevOps/2022-02-19-eks-aws.md
+++ b/_posts/DevOps/2022-02-19-eks-aws.md
@@ -133,6 +133,9 @@ ls
 - terraform init
 - 클러스터 접속
   - kubectl 도구 설치([링크](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/))
+    - `Install kubectl binary with curl on Linux` 부분 하위 입력(설치 경로는 utils로 따로 잡아준다.)
+    - `Install kubectl` 부분 하위 입력
+    - `kubectl version` 입력하여 설치 확인
   - kubeconfig 설정
 
 ```shell
