--- a/_posts/DevOps/2022-02-19-eks-aws.md
+++ b/_posts/DevOps/2022-02-19-eks-aws.md
@@ -139,11 +139,11 @@ ls
   - kubeconfig 설정
 
 ```shell
-$aws eks --region <REGION> update-kubeconfig --name <CLUSTER_NAME>
+aws eks --region <REGION> update-kubeconfig --name <CLUSTER_NAME>
 ```
 - 노드확인
 ```shell
-$ kubectl get node
+kubectl get node
 ```
 
 #### Terraform base source
